@@ -117,6 +117,14 @@ public class ElasticApmTracerBuilder {
     }
 
     public ElasticApmTracer build() {
+        return build(false);
+    }
+
+    public ElasticApmTracer buildAndStart() {
+        return build(true);
+    }
+
+    private ElasticApmTracer build(boolean startTracer) {
         boolean addApmServerConfigSource = false;
         List<LifecycleListener> lifecycleListeners = new ArrayList<>();
 
@@ -150,6 +158,9 @@ public class ElasticApmTracerBuilder {
         lifecycleListeners.addAll(DependencyInjectingServiceLoader.load(LifecycleListener.class, tracer));
         lifecycleListeners.addAll(extraLifecycleListeners);
         tracer.init(lifecycleListeners);
+        if (startTracer) {
+            tracer.start();
+        }
         return tracer;
     }
 
